# task-mng-api

./: Cargo.toml  ReadMe.md  dev.env  justfile  taskmng.sqlite
src/: main.rs
src/configs/: mod.rs
src/constns/: cache.rs
src/consts/: cache.rs
src/domain/: mod.rs
src/domain/collaboration/: model.rs  repository.rs  service.rs
src/domain/entity/: prelude.rs
src/domain/notification/: mod.rs  model.rs  repository.rs  service.rs
src/domain/task/: model.rs  repository.rs  service.rs
src/domain/user/: model.rs  repository.rs  service.rs
src/infrastructure/: auth.rs  cache.rs  database.rs  mod.rs
src/infrastructure/persistence/repositories/: collaborators_repository.rs  mod.rs  notification_repository.rs  task_repository.rs  user_repository.rs
src/infrastructure/transport/: protocols.rs  websocket_handler.rs
src/interfaces/: mod.rs  routes.rs  websocket.rs
src/interfaces/controllers/: mod.rs  task_contoller.rs  users_controller.rs
src/interfaces/dtos/: collaboration_dto.rs  mod.rs  notification_dto.rs  task_dto.rs  user_dto.rs
src/utils/: mod.rs
