[package]
name = "task-mng-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
sea-orm = {version="0.12.15", features=["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-time", "with-chrono", "with-json"]}
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = {version="0.3.18", features=["env-filter", "fmt"]}
uuid = "1.9.1"
