[package]
name = "task-mng-api"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = [
#     "src/infrastructure/persistence/migrations/migration",
# ]

[dependencies]
moka = { version = "0.12", features = ["future"] }
actix-web = "4.8.0"
chrono = "0.4.38"
sea-orm = {version="0.12.15", features=["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-time", "with-chrono", "with-json"]}
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = {version="0.3.18", features=["env-filter", "fmt"]}
uuid = { version = "1.9.1", features = ["v4"] }
serde = {version="1.0.204", features=["derive"]}
argon2 = {version="0.5.3", features=["std"]}
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
reqwest = "0.12.5"
